--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,10 @@ body {
                 font-size: 1.5em;
                 margin-right: 60px; /* Adjust the right margin to create space */
             }
+                    .cart-icon {
+    color: white; /* Replace 'blue' with the color you want */
+}
+
             .mobile-menu-btn {
                 display: block;
                 position: absolute;
